pi-cluster/deployments/mycriticmatch/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mycriticmatch
  namespace: mycriticmatch
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mycriticmatch.charlieegan3.com
    secretName: mycriticmatch-tls
  rules:
  - host: mycriticmatch.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mycriticmatch
          servicePort: 80
